crates/stackable-versioned/src/flux_converter/tests/snapshots/stackable_versioned__flux_converter__tests__tests__fail@request_missing.json.snap
---
source: crates/stackable-versioned/src/flux_converter/tests/mod.rs
expression: formatted
input_file: crates/stackable-versioned/fixtures/inputs/fail/request_missing.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "The ConversionReview send did not include any request: request missing in ConversionReview",
      "reason": "ConversionReview request missing"
    },
    "convertedObjects": []
  }
}
