crates/stackable-versioned/src/flux_converter/tests/snapshots/stackable_versioned__flux_converter__tests__tests__fail@unkown_current_version.json.snap
---
source: crates/stackable-versioned/src/flux_converter/tests/mod.rs
expression: formatted
input_file: crates/stackable-versioned/fixtures/inputs/fail/unkown_current_version.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Failure",
      "code": 500,
      "message": "failed to parse current resource version \"test.stackable.tech/v99\": the api version \"test.stackable.tech/v99\" is not known",
      "reason": "failed to parse current resource version \"test.stackable.tech/v99\": the api version \"test.stackable.tech/v99\" is not known"
    },
    "convertedObjects": []
  }
}
