crates/stackable-versioned/src/flux_converter/tests/snapshots/stackable_versioned__flux_converter__tests__tests__fail@unkown_desired_version.json.snap
---
source: crates/stackable-versioned/src/flux_converter/tests/mod.rs
expression: formatted
input_file: crates/stackable-versioned/fixtures/inputs/fail/unkown_desired_version.json
---
{
  "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
  "result": {
    "status": "Failure",
    "code": 500,
    "message": "failed to parse desired resource version \"v99\": the resource version \"v99\" is not known",
    "reason": "failed to parse desired resource version \"v99\": the resource version \"v99\" is not known"
  },
  "convertedObjects": []
}
