crates/stackable-versioned/src/flux_converter/tests/snapshots/stackable_versioned__flux_converter__tests__tests__fail@unparseable_missing_field.json.snap
---
source: crates/stackable-versioned/src/flux_converter/tests/mod.rs
expression: formatted
input_file: crates/stackable-versioned/fixtures/inputs/fail/unparseable_missing_field.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Failure",
      "code": 500,
      "message": "failed to deserialize object of kind \"Person\": missing field `username`",
      "reason": "failed to deserialize object of kind \"Person\": missing field `username`"
    },
    "convertedObjects": []
  }
}
