crates/stackable-versioned/src/flux_converter/tests/snapshots/stackable_versioned__flux_converter__tests__tests__fail@wrong_kind.json.snap
---
source: crates/stackable-versioned/src/flux_converter/tests/mod.rs
expression: formatted
input_file: crates/stackable-versioned/fixtures/inputs/fail/wrong_kind.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "I was asked to convert the kind \"SomeOtherResource\", but I can only convert objects of kind \"Person\"",
      "reason": "I was asked to convert the kind \"SomeOtherResource\", but I can only convert objects of kind \"Person\""
    },
    "convertedObjects": []
  }
}
