crates/stackable-versioned/src/flux_converter/tests/snapshots/stackable_versioned__flux_converter__tests__tests__pass@persons_to_v3.json.snap
---
source: crates/stackable-versioned/src/flux_converter/tests/mod.rs
expression: formatted
input_file: crates/stackable-versioned/fixtures/inputs/pass/persons_to_v3.json
---
{
  "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
  "result": {
    "status": "Success"
  },
  "convertedObjects": [
    {
      "firstName": "",
      "gender": "Unknown",
      "lastName": "",
      "username": "sbernauer"
    }
  ]
}
